[ADD] Initial commit for branch 11.0

--- a/status_bar_clock/static/description/index.html
+++ b/status_bar_clock/static/description/index.html
@@ -9,23 +9,23 @@
 
     <div class="oe_centered">
         <ul><li>
-            After installing the module there will be default date time format but if you want to change format you can do it from settings > users > companies > clock format.It will be shown according to your format.
+            After installing the module there will be default date and time format but if you want to change format you can do it from settings > users > company > clock format.It will be shown according to your format.
         </li></ul>
     </div>
     <div class="oe_row oe_centered">
         <div class="oe_span12">
-            <img class="img-responsive thumbnail" style="border: 1px solid black;" src="setdatetime.png">
+            <img class="img-responsive thumbnail" style="border: 1px solid black;" src="set_datetime.png">
         </div>
     </div>
 
     <div class="oe_centered">
         <ul><li>
-            The clock will be displayed on left side in status bar.Date and time will be displayed according to system's date and time.If You will change the company, time will automatically change according to it.
+            The clock will be displayed on left side in status bar.Date and time will be displayed according to system's date and time.If you will change the company it will change format according to it.
         </li></ul>
     </div>
     <div class="oe_row oe_centered">
         <div class="oe_span12">
-            <img class="img-responsive thumbnail" style="border: 1px solid black;" src="display_datetime.png">
+            <img class="img-responsive thumbnail" style="border: 1px solid black;" src="displat_datetime.png">
         </div>
     </div>
 
