[IMP] index file in 11.0

--- a/status_bar_clock/static/description/index.html
+++ b/status_bar_clock/static/description/index.html
@@ -5,27 +5,41 @@
                     Status Bar Clock </span></b></h4>
         </div>
     </div>
-    <h3 class="oe_slogn" style="text-align: center;color: grey;"> This module helps user to check date and time directly from any module.</b></h3>
+    <p align="left">The module will display the date and time directly from any module. The user can edit the default date and time as per their location and their format.</p>
+
+    <div class="oe_row oe_centered">
+        <div class="oe_span_10 oe_centered">
+            <h4 class="oe_slogan" style="margin-left: 120px;"><b><span class="fa fa-star fa-spin"></span>
+                    Prerequisites before Installation </span></b></h4>
+        </div>
+    </div>
+    <p align="left">No prerequisites needed.</p>
+
+
+    <div class="oe_row oe_centered">
+        <div class="oe_span_10 oe_centered">
+            <h4 class="oe_slogan" style="margin-left: 120px;"><b><span class="fa fa-star fa-spin"></span>
+                    Configurations </span></b></h4>
+        </div>
+    </div>
+    <p align="left">No configurations.</p>
 
     <div class="oe_centered">
-        <ul><li>
-            After installing the module there will be default date and time format but if you want to change format you can do it from settings > users > company > clock format.It will be shown according to your format.
-        </li></ul>
+        <p>Once you install the module, default date and time will be displayed according to a system on the screen. </p>
+        <p>You can edit it from: - Settings>Users>Company> Clock format.</p>
     </div>
     <div class="oe_row oe_centered">
         <div class="oe_span12">
-            <img class="img-responsive thumbnail" style="border: 1px solid black;" src="set_datetime.png">
+            <img src="set_datetime.png" style="width: 100%;"/>
         </div>
     </div>
 
     <div class="oe_centered">
-        <ul><li>
-            The clock will be displayed on left side in status bar.Date and time will be displayed according to system's date and time.If you will change the company it will change format according to it.
-        </li></ul>
+        <p>As soon as you update the date and time from the settings you can see the date and time displayed in the left of the status bar. Suppose if a user has multiple companies with different location, then he/she can provide different date and time for each company. If you switch the company the date and time will be updated accordingly.</p>
     </div>
     <div class="oe_row oe_centered">
         <div class="oe_span12">
-            <img class="img-responsive thumbnail" style="border: 1px solid black;" src="displat_datetime.png">
+            <img src="displat_datetime.png" style="width: 100%;"/>
         </div>
     </div>
 
