[IMP] index file in 10.0

--- a/status_bar_clock/static/description/index.html
+++ b/status_bar_clock/static/description/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="oe_row oe_centered">
         <div class="oe_span12">
-            <img src="set_datetime.png" style="width: 100%;"/>
+            <img src="setdatetime.png" style="width: 100%;"/>
         </div>
     </div>
 
@@ -39,7 +39,7 @@
     </div>
     <div class="oe_row oe_centered">
         <div class="oe_span12">
-            <img src="displat_datetime.png" style="width: 100%;"/>
+            <img src="display_datetime.png" style="width: 100%;"/>
         </div>
     </div>
 
